--- a/L3.md
+++ b/L3.md
@@ -2,11 +2,11 @@
 
 ##The key points discussed were:
 
-⦁	ISA (is a) Heirarchies
-⦁	Aggregation
-⦁	Using the Entity-Relationship Model
+*	ISA (is a) Heirarchies
+*	Aggregation
+*	Using the Entity-Relationship Model
 
-ISA (is a) Hierarchies
+#ISA (is a) Hierarchies
 Those familiar with an object oriented language such as C++ or Java will see that ISA Hierarchies are related to what is known in those languages as "inheritence."
 For example, consider the concept of a user.  You wouldn't necessarily want to only represent a user in a database or application, you would probably want to have different types of users that each have their independent set of attributes and relationships that you would want to capture.  For example, as the figure shows, it might not make sense to represent all of  the instructors and student attributes in the generic users table or "Users" entity because there are potentially some things that are specific to Instructors that you don't want students to have access to.  Additionally, there are probably some things specific to students that do not apply to instructors.  For example, the "Rating" attribute shown for Instructors and the "Grade" attribute shown for Students are examples.  The correct way to refer to the following figure would be to say that "A is a B" or "A is a type of B" meaning that Instructors are a type of Users or a Student are a type of Users.
 INSERT ISA DIAGRAM HERE
@@ -17,7 +17,7 @@ On top of ISA Hierarchies, there are two types of constraints that are potential
 1.	Overlap Constraint - for a given entity - or in case of the ISA diagram, for a given "User", can they be both Instructors and Students, or must they be only one or the other?  This type of constraint can either be allowed or disallowed.
 2.	Covering Constraint - in the case of the ISA diagram, one might ask, do all Users have to be either an Instructor or a Student?  If this is required, this is referred to as forcing the Covering Constraint.  If you don't care, and Users do not have to be an Instructor or a Student, but could for example be part of the Administrative group of employees, you would say that the Covering Constraint does not hold.
 Depicting Overlap and Covering Constraints are not easily captured or represented in the Entity Relationship Diagram.  Instead, they must be documented in text or supporting documentation for your design.
-Aggregation
+#Aggregation
 Aggregation is used in instances when you want to represent Relationships between Relationships.  Where are these useful?  For example, as shown in the following diagram:
 INSERT DONATES TUPLE DIAGRAM HERE
 This diagram shows two Entites; "Companies" and "Courses," that are connected by the "Donates" Relationship.  This relationhip shows that Companies, can Donate a specific Amount, to particular Courses.  For example, IBM could donate to COMS 4111.
@@ -36,13 +36,15 @@ This diagram depicts that "A Course can have exactly one Instructor."  In this s
 As noted, when using constraints in a Ternary or N-ary Relationship, the constraint can have an unintentional side effect on other Entities in a Relationship Set.  In cases where there are potentially unintentional side effects, Aggregation is often used.
 For example, if you added a constraint on the Courses or Companies Entity in the below diagram, it wouldn't inadvertently carry over into the Instructors Relationship.  In addiiton, if you wanted to say that each donation "Donates Relationship" can be managed "Manages Relationship" by at most one Instructor, you could modify the line connecting the "Manages" and "Donates" Relationships with an arrow and it doesn't inadvertantly affect the Entity Relationships in the Aggregation portion of the diagram.
 INSERT DONATES AGGREGATION DIAGRAM HERE - potentially with modified line?
-Entity-Relationship Model
+#Entity-Relationship Model
+
 ER Definition Review
-⦁	Entity: An "object" that is distinguishable from other objects
-⦁	Attribute: Information that describes the entity
-⦁	Attribute domain: Range of permissible values
-⦁	Entity Set: Collection of entities with the same attributes
-⦁	Relationship: Association between Entities
-⦁	Relationship Set: Collection of similar relationships
+
+*	Entity: An "object" that is distinguishable from other objects
+*	Attribute: Information that describes the entity
+*	Attribute domain: Range of permissible values
+*	Entity Set: Collection of entities with the same attributes
+*	Relationship: Association between Entities
+*	Relationship Set: Collection of similar relationships
 Keys
 Keys are the minimal set of attributes that uniquely identify an Entity.  Most Entities have a key.  The exception is a "Weak Entity." In an Entity, there might be multiple candidate keys.  For example, both a "uid" and "email" might could be unique to a particular Entity.  In additon, a key might involve multiple attributes.  For example, a class might be identified by both a number and a section.  Primary keys are considered the most important type of "key" and are chosen from the set of candidate keys and underlined in Entity diagrams.
