--- a/L3.md
+++ b/L3.md
@@ -1,4 +1,4 @@
-####Lecture 3 continued the discussion on Entity Relationships.  
+#Lecture 3 continued the discussion on Entity Relationships.  
 
 ##The key points discussed were:
 
