--- a/L3.md
+++ b/L3.md
@@ -9,13 +9,18 @@
 #ISA (is a) Hierarchies
 Those familiar with an object oriented language such as C++ or Java will see that ISA Hierarchies are related to what is known in those languages as "inheritence."
 For example, consider the concept of a user.  You wouldn't necessarily want to only represent a user in a database or application, you would probably want to have different types of users that each have their independent set of attributes and relationships that you would want to capture.  For example, as the figure shows, it might not make sense to represent all of  the instructors and student attributes in the generic users table or "Users" entity because there are potentially some things that are specific to Instructors that you don't want students to have access to.  Additionally, there are probably some things specific to students that do not apply to instructors.  For example, the "Rating" attribute shown for Instructors and the "Grade" attribute shown for Students are examples.  The correct way to refer to the following figure would be to say that "A is a B" or "A is a type of B" meaning that Instructors are a type of Users or a Student are a type of Users.
+
 INSERT ISA DIAGRAM HERE
+
 ISA Hierarchies are useful in a variety of situations.  For example:
-⦁	If you want to segment a particular attribute to a specific table.  For example, the "Grade" attribute is not an applicable attribute to Instructors , so the ISA Hierarchiey enables us to segment the Grade attribute out of the Users table to the Student table.
-⦁	Additionally, if during your database design you start creating multiple entities and then realize that they overlap by the set of attributes by which they are defined.  In this situation, you might decide to create a parent class and use the ISA Hierarchy to show this inheretence relationsip.
+If you want to segment a particular attribute to a specific table.  For example, the "Grade" attribute is not an applicable attribute to Instructors , so the ISA Hierarchiey enables us to segment the Grade attribute out of the Users table to the Student table.
+Additionally, if during your database design you start creating multiple entities and then realize that they overlap by the set of attributes by which they are defined.  In this situation, you might decide to create a parent class and use the ISA Hierarchy to show this inheretence relationsip.
+
 On top of ISA Hierarchies, there are two types of constraints that are potentially useful.
-1.	Overlap Constraint - for a given entity - or in case of the ISA diagram, for a given "User", can they be both Instructors and Students, or must they be only one or the other?  This type of constraint can either be allowed or disallowed.
-2.	Covering Constraint - in the case of the ISA diagram, one might ask, do all Users have to be either an Instructor or a Student?  If this is required, this is referred to as forcing the Covering Constraint.  If you don't care, and Users do not have to be an Instructor or a Student, but could for example be part of the Administrative group of employees, you would say that the Covering Constraint does not hold.
+
+*	Overlap Constraint - for a given entity - or in case of the ISA diagram, for a given "User", can they be both Instructors and Students, or must they be only one or the other?  This type of constraint can either be allowed or disallowed.
+*	Covering Constraint - in the case of the ISA diagram, one might ask, do all Users have to be either an Instructor or a Student?  If this is required, this is referred to as forcing the Covering Constraint.  If you don't care, and Users do not have to be an Instructor or a Student, but could for example be part of the Administrative group of employees, you would say that the Covering Constraint does not hold.
+
 Depicting Overlap and Covering Constraints are not easily captured or represented in the Entity Relationship Diagram.  Instead, they must be documented in text or supporting documentation for your design.
 #Aggregation
 Aggregation is used in instances when you want to represent Relationships between Relationships.  Where are these useful?  For example, as shown in the following diagram:
