--- a/L3.md
+++ b/L3.md
@@ -10,7 +10,7 @@
 Those familiar with an object oriented language such as C++ or Java will see that ISA Hierarchies are related to what is known in those languages as "inheritence."
 For example, consider the concept of a user.  You wouldn't necessarily want to only represent a user in a database or application, you would probably want to have different types of users that each have their independent set of attributes and relationships that you would want to capture.  For example, as the figure shows, it might not make sense to represent all of  the instructors and student attributes in the generic users table or "Users" entity because there are potentially some things that are specific to Instructors that you don't want students to have access to.  Additionally, there are probably some things specific to students that do not apply to instructors.  For example, the "Rating" attribute shown for Instructors and the "Grade" attribute shown for Students are examples.  The correct way to refer to the following figure would be to say that "A is a B" or "A is a type of B" meaning that Instructors are a type of Users or a Student are a type of Users.
 
-__INSERT ISA DIAGRAM HERE__
+##__INSERT ISA DIAGRAM HERE__
 
 ISA Hierarchies are useful in a variety of situations.  For example:
 If you want to segment a particular attribute to a specific table.  For example, the "Grade" attribute is not an applicable attribute to Instructors , so the ISA Hierarchiey enables us to segment the Grade attribute out of the Users table to the Student table.
